FIX: remove extra space between table headers and the content

--- a/client/my-sites/importer/author-mapping-pane.scss
+++ b/client/my-sites/importer/author-mapping-pane.scss
@@ -1,6 +1,6 @@
 .importer__mapping-header {
 	border-bottom: 1px solid var( --color-neutral-light );
-	margin-bottom: 16px;
+	margin-bottom: 8px;
 	padding-bottom: 8px;
 
 	font-size: 11px;
